xgboost model per position

--- a/notebooks/Minutes_prediction_xgboost.ipynb
+++ b/notebooks/Minutes_prediction_xgboost.ipynb
@@ -2,33 +2,447 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "53e0f29c-7495-4a51-bf5e-e5a6d2b21654",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from xgboost import XGBRegressor, XGBClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import root_mean_squared_error, mean_squared_error, mean_absolute_error\n",
+    "import sklearn\n",
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "e14510e3-b663-490a-b731-23b8c18c9a19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('/Users/cvlahos/Downloads/player_minutes_with_extra_columns_2425.csv')"
+    "train_data = pd.read_pickle('../datasets/training_dictionary.pkl')\n",
+    "test_data = pd.read_pickle('../datasets/validation_dictionary.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
+   "id": "cf8bf126",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['index_0',\n",
+       " 'id_0',\n",
+       " 'player_team_0',\n",
+       " 'opponent_0',\n",
+       " 'points_0',\n",
+       " 'goals_0',\n",
+       " 'assists_0',\n",
+       " 'bonus_0',\n",
+       " 'conceded_0',\n",
+       " 'minutes_0',\n",
+       " 'player_id_0',\n",
+       " 'result_id_0',\n",
+       " 'fixture_id_0',\n",
+       " 'clean_sheets_0',\n",
+       " 'own_goals_0',\n",
+       " 'penalties_saved_0',\n",
+       " 'penalties_missed_0',\n",
+       " 'yellow_cards_0',\n",
+       " 'red_cards_0',\n",
+       " 'saves_0',\n",
+       " 'bps_0',\n",
+       " 'influence_0',\n",
+       " 'creativity_0',\n",
+       " 'threat_0',\n",
+       " 'ict_index_0',\n",
+       " 'expected_goals_0',\n",
+       " 'expected_assists_0',\n",
+       " 'expected_goal_involvements_0',\n",
+       " 'expected_goals_conceded_0',\n",
+       " 'datetime_0',\n",
+       " 'team_G_0',\n",
+       " 'team_Gc_0',\n",
+       " 'p_att_0',\n",
+       " 'p_mid_0',\n",
+       " 'p_defn_0',\n",
+       " 'p_ovr_0',\n",
+       " 'o_att_0',\n",
+       " 'o_mid_0',\n",
+       " 'o_defn_0',\n",
+       " 'o_ovr_0',\n",
+       " 'index_1',\n",
+       " 'id_1',\n",
+       " 'player_team_1',\n",
+       " 'opponent_1',\n",
+       " 'points_1',\n",
+       " 'goals_1',\n",
+       " 'assists_1',\n",
+       " 'bonus_1',\n",
+       " 'conceded_1',\n",
+       " 'minutes_1',\n",
+       " 'player_id_1',\n",
+       " 'result_id_1',\n",
+       " 'fixture_id_1',\n",
+       " 'clean_sheets_1',\n",
+       " 'own_goals_1',\n",
+       " 'penalties_saved_1',\n",
+       " 'penalties_missed_1',\n",
+       " 'yellow_cards_1',\n",
+       " 'red_cards_1',\n",
+       " 'saves_1',\n",
+       " 'bps_1',\n",
+       " 'influence_1',\n",
+       " 'creativity_1',\n",
+       " 'threat_1',\n",
+       " 'ict_index_1',\n",
+       " 'expected_goals_1',\n",
+       " 'expected_assists_1',\n",
+       " 'expected_goal_involvements_1',\n",
+       " 'expected_goals_conceded_1',\n",
+       " 'datetime_1',\n",
+       " 'team_G_1',\n",
+       " 'team_Gc_1',\n",
+       " 'p_att_1',\n",
+       " 'p_mid_1',\n",
+       " 'p_defn_1',\n",
+       " 'p_ovr_1',\n",
+       " 'o_att_1',\n",
+       " 'o_mid_1',\n",
+       " 'o_defn_1',\n",
+       " 'o_ovr_1',\n",
+       " 'index_2',\n",
+       " 'id_2',\n",
+       " 'player_team_2',\n",
+       " 'opponent_2',\n",
+       " 'points_2',\n",
+       " 'goals_2',\n",
+       " 'assists_2',\n",
+       " 'bonus_2',\n",
+       " 'conceded_2',\n",
+       " 'minutes_2',\n",
+       " 'player_id_2',\n",
+       " 'result_id_2',\n",
+       " 'fixture_id_2',\n",
+       " 'clean_sheets_2',\n",
+       " 'own_goals_2',\n",
+       " 'penalties_saved_2',\n",
+       " 'penalties_missed_2',\n",
+       " 'yellow_cards_2',\n",
+       " 'red_cards_2',\n",
+       " 'saves_2',\n",
+       " 'bps_2',\n",
+       " 'influence_2',\n",
+       " 'creativity_2',\n",
+       " 'threat_2',\n",
+       " 'ict_index_2',\n",
+       " 'expected_goals_2',\n",
+       " 'expected_assists_2',\n",
+       " 'expected_goal_involvements_2',\n",
+       " 'expected_goals_conceded_2',\n",
+       " 'datetime_2',\n",
+       " 'team_G_2',\n",
+       " 'team_Gc_2',\n",
+       " 'p_att_2',\n",
+       " 'p_mid_2',\n",
+       " 'p_defn_2',\n",
+       " 'p_ovr_2',\n",
+       " 'o_att_2',\n",
+       " 'o_mid_2',\n",
+       " 'o_defn_2',\n",
+       " 'o_ovr_2',\n",
+       " 'index_3',\n",
+       " 'id_3',\n",
+       " 'player_team_3',\n",
+       " 'opponent_3',\n",
+       " 'points_3',\n",
+       " 'goals_3',\n",
+       " 'assists_3',\n",
+       " 'bonus_3',\n",
+       " 'conceded_3',\n",
+       " 'minutes_3',\n",
+       " 'player_id_3',\n",
+       " 'result_id_3',\n",
+       " 'fixture_id_3',\n",
+       " 'clean_sheets_3',\n",
+       " 'own_goals_3',\n",
+       " 'penalties_saved_3',\n",
+       " 'penalties_missed_3',\n",
+       " 'yellow_cards_3',\n",
+       " 'red_cards_3',\n",
+       " 'saves_3',\n",
+       " 'bps_3',\n",
+       " 'influence_3',\n",
+       " 'creativity_3',\n",
+       " 'threat_3',\n",
+       " 'ict_index_3',\n",
+       " 'expected_goals_3',\n",
+       " 'expected_assists_3',\n",
+       " 'expected_goal_involvements_3',\n",
+       " 'expected_goals_conceded_3',\n",
+       " 'datetime_3',\n",
+       " 'team_G_3',\n",
+       " 'team_Gc_3',\n",
+       " 'p_att_3',\n",
+       " 'p_mid_3',\n",
+       " 'p_defn_3',\n",
+       " 'p_ovr_3',\n",
+       " 'o_att_3',\n",
+       " 'o_mid_3',\n",
+       " 'o_defn_3',\n",
+       " 'o_ovr_3',\n",
+       " 'out_index',\n",
+       " 'out_id',\n",
+       " 'out_player_team',\n",
+       " 'out_opponent',\n",
+       " 'out_points',\n",
+       " 'out_goals',\n",
+       " 'out_assists',\n",
+       " 'out_bonus',\n",
+       " 'out_conceded',\n",
+       " 'out_minutes',\n",
+       " 'out_player_id',\n",
+       " 'out_result_id',\n",
+       " 'out_fixture_id',\n",
+       " 'out_clean_sheets',\n",
+       " 'out_own_goals',\n",
+       " 'out_penalties_saved',\n",
+       " 'out_penalties_missed',\n",
+       " 'out_yellow_cards',\n",
+       " 'out_red_cards',\n",
+       " 'out_saves',\n",
+       " 'out_bps',\n",
+       " 'out_influence',\n",
+       " 'out_creativity',\n",
+       " 'out_threat',\n",
+       " 'out_ict_index',\n",
+       " 'out_expected_goals',\n",
+       " 'out_expected_assists',\n",
+       " 'out_expected_goal_involvements',\n",
+       " 'out_expected_goals_conceded',\n",
+       " 'out_datetime',\n",
+       " 'out_team_G',\n",
+       " 'out_team_Gc',\n",
+       " 'out_p_att',\n",
+       " 'out_p_mid',\n",
+       " 'out_p_defn',\n",
+       " 'out_p_ovr',\n",
+       " 'out_o_att',\n",
+       " 'out_o_mid',\n",
+       " 'out_o_defn',\n",
+       " 'out_o_ovr']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data['GK'].columns.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "id": "fa67c1ef-344e-4d47-8000-e81bd8040ed8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_sorted = data.sort_values(by=['player', 'date']).reset_index()"
+    "# data_sorted = data.sort_values(by=['player', 'date']).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "1ee02235",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_config = {\n",
+    "    'position': 'MID',\n",
+    "    'train_features': ['minutes_', 'bonus_'],\n",
+    "    'target_feature': 'out_minutes'\n",
+    "}\n",
+    "\n",
+    "def get_cols(df, substring):\n",
+    "    return [col for col in df.columns if substring in col]\n",
+    "\n",
+    "# print(get_cols(train_data['GK'], 'bonus'))\n",
+    "\n",
+    "def get_features(df, substrings):\n",
+    "    features = []\n",
+    "    for substring in substrings:\n",
+    "        features.extend(get_cols(df, substring))\n",
+    "    return features\n",
+    "\n",
+    "# get_features(train_data['GK'], ['minutes', 'bonus'])\n",
+    "\n",
+    "def get_metrics(labels, predictions):\n",
+    "    rmse = root_mean_squared_error(labels, predictions)\n",
+    "    mse = mean_squared_error(labels, predictions)\n",
+    "    mae = mean_absolute_error(labels, predictions)\n",
+    "    errors = {'rmse': rmse, 'mae': mae, 'mse': mse}\n",
+    "    return errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "bdceb3fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['minutes_0',\n",
+       " 'minutes_1',\n",
+       " 'minutes_2',\n",
+       " 'minutes_3',\n",
+       " 'bonus_0',\n",
+       " 'bonus_1',\n",
+       " 'bonus_2',\n",
+       " 'bonus_3']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_features(test_data[run_config['position']], run_config['train_features'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "cae240f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main(config_dct):\n",
+    "\n",
+    "    train_feats = get_features(train_data[config_dct['position']], config_dct['train_features'])\n",
+    "    train_X = train_data[config_dct['position']][train_feats]\n",
+    "    train_y = train_data[config_dct['position']][config_dct['target_feature']]\n",
+    "    test_X = test_data[config_dct['position']][train_feats]\n",
+    "    test_y = test_data[config_dct['position']][config_dct['target_feature']]\n",
+    "\n",
+    "    model = XGBRegressor(objective='reg:squarederror', n_estimators=500, learning_rate=0.1, max_depth=2, evaluation_metric='rmse')\n",
+    "\n",
+    "    model.fit(train_X, train_y, eval_set=[(train_X, train_y), (test_X, test_y)], verbose=10)\n",
+    "\n",
+    "    predictions = model.predict(test_X)\n",
+    "\n",
+    "    errors = get_metrics(test_y, predictions)\n",
+    "\n",
+    "    return model, errors\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "4b06030c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\tvalidation_0-rmse:35.26633\tvalidation_1-rmse:35.02796\n",
+      "[10]\tvalidation_0-rmse:24.93555\tvalidation_1-rmse:24.27104\n",
+      "[20]\tvalidation_0-rmse:22.86507\tvalidation_1-rmse:22.10389\n",
+      "[30]\tvalidation_0-rmse:22.47353\tvalidation_1-rmse:21.70469\n",
+      "[40]\tvalidation_0-rmse:22.37564\tvalidation_1-rmse:21.62097\n",
+      "[50]\tvalidation_0-rmse:22.34000\tvalidation_1-rmse:21.59498\n",
+      "[60]\tvalidation_0-rmse:22.32270\tvalidation_1-rmse:21.59142\n",
+      "[70]\tvalidation_0-rmse:22.30848\tvalidation_1-rmse:21.58795\n",
+      "[80]\tvalidation_0-rmse:22.29715\tvalidation_1-rmse:21.59047\n",
+      "[90]\tvalidation_0-rmse:22.28623\tvalidation_1-rmse:21.59020\n",
+      "[100]\tvalidation_0-rmse:22.27570\tvalidation_1-rmse:21.58658\n",
+      "[110]\tvalidation_0-rmse:22.26405\tvalidation_1-rmse:21.58412\n",
+      "[120]\tvalidation_0-rmse:22.25524\tvalidation_1-rmse:21.58304\n",
+      "[130]\tvalidation_0-rmse:22.24527\tvalidation_1-rmse:21.57701\n",
+      "[140]\tvalidation_0-rmse:22.23419\tvalidation_1-rmse:21.57382\n",
+      "[150]\tvalidation_0-rmse:22.22479\tvalidation_1-rmse:21.57060\n",
+      "[160]\tvalidation_0-rmse:22.21525\tvalidation_1-rmse:21.56970\n",
+      "[170]\tvalidation_0-rmse:22.20672\tvalidation_1-rmse:21.57396\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cvlahos/anaconda3/envs/hackweek/lib/python3.13/site-packages/xgboost/core.py:158: UserWarning: [15:28:59] WARNING: /var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_48ydvcv9e5/croot/xgboost-split_1748329884729/work/src/learner.cc:740: \n",
+      "Parameters: { \"evaluation_metric\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[180]\tvalidation_0-rmse:22.19937\tvalidation_1-rmse:21.57447\n",
+      "[190]\tvalidation_0-rmse:22.19121\tvalidation_1-rmse:21.57651\n",
+      "[200]\tvalidation_0-rmse:22.18471\tvalidation_1-rmse:21.57496\n",
+      "[210]\tvalidation_0-rmse:22.17789\tvalidation_1-rmse:21.57306\n",
+      "[220]\tvalidation_0-rmse:22.17179\tvalidation_1-rmse:21.57164\n",
+      "[230]\tvalidation_0-rmse:22.16504\tvalidation_1-rmse:21.57040\n",
+      "[240]\tvalidation_0-rmse:22.15875\tvalidation_1-rmse:21.57299\n",
+      "[250]\tvalidation_0-rmse:22.15238\tvalidation_1-rmse:21.56975\n",
+      "[260]\tvalidation_0-rmse:22.14695\tvalidation_1-rmse:21.56823\n",
+      "[270]\tvalidation_0-rmse:22.14064\tvalidation_1-rmse:21.57272\n",
+      "[280]\tvalidation_0-rmse:22.13369\tvalidation_1-rmse:21.57625\n",
+      "[290]\tvalidation_0-rmse:22.12798\tvalidation_1-rmse:21.57937\n",
+      "[300]\tvalidation_0-rmse:22.12400\tvalidation_1-rmse:21.57797\n",
+      "[310]\tvalidation_0-rmse:22.11984\tvalidation_1-rmse:21.58031\n",
+      "[320]\tvalidation_0-rmse:22.11511\tvalidation_1-rmse:21.58236\n",
+      "[330]\tvalidation_0-rmse:22.11018\tvalidation_1-rmse:21.58204\n",
+      "[340]\tvalidation_0-rmse:22.10554\tvalidation_1-rmse:21.58449\n",
+      "[350]\tvalidation_0-rmse:22.09989\tvalidation_1-rmse:21.58876\n",
+      "[360]\tvalidation_0-rmse:22.09483\tvalidation_1-rmse:21.59126\n",
+      "[370]\tvalidation_0-rmse:22.09019\tvalidation_1-rmse:21.59358\n",
+      "[380]\tvalidation_0-rmse:22.08543\tvalidation_1-rmse:21.59633\n",
+      "[390]\tvalidation_0-rmse:22.08053\tvalidation_1-rmse:21.59781\n",
+      "[400]\tvalidation_0-rmse:22.07586\tvalidation_1-rmse:21.59669\n",
+      "[410]\tvalidation_0-rmse:22.07132\tvalidation_1-rmse:21.59840\n",
+      "[420]\tvalidation_0-rmse:22.06687\tvalidation_1-rmse:21.60104\n",
+      "[430]\tvalidation_0-rmse:22.06220\tvalidation_1-rmse:21.60361\n",
+      "[440]\tvalidation_0-rmse:22.05759\tvalidation_1-rmse:21.60521\n",
+      "[450]\tvalidation_0-rmse:22.05368\tvalidation_1-rmse:21.60751\n",
+      "[460]\tvalidation_0-rmse:22.05068\tvalidation_1-rmse:21.60879\n",
+      "[470]\tvalidation_0-rmse:22.04646\tvalidation_1-rmse:21.61037\n",
+      "[480]\tvalidation_0-rmse:22.04308\tvalidation_1-rmse:21.61409\n",
+      "[490]\tvalidation_0-rmse:22.04027\tvalidation_1-rmse:21.61586\n",
+      "[499]\tvalidation_0-rmse:22.03710\tvalidation_1-rmse:21.61791\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'rmse': 21.617908477783203,\n",
+       " 'mae': 13.378870010375977,\n",
+       " 'mse': 467.3339538574219}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model, errors = main(run_config)\n",
+    "errors"
    ]
   },
   {
