--- a/notebooks/rocket_regression_apply_lynge_data.ipynb
+++ b/notebooks/rocket_regression_apply_lynge_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "95d0ebd8",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a4718b7f",
    "metadata": {},
    "outputs": [],
@@ -36,13 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9bce42eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_fwd = train_dict['MID']\n",
-    "val_fwd = val_dict['MID']"
+    "train = train_dict['MID']\n",
+    "val = val_dict['MID']"
    ]
   },
   {
@@ -53,66 +53,35 @@
    "outputs": [],
    "source": [
     "# Select relevant columns\n",
-    "train_fwd = train_fwd[['minutes_0', 'minutes_1', 'minutes_2', 'minutes_3','out',]]\n",
-    "val_fwd   = val_fwd[['minutes_0', 'minutes_1', 'minutes_2', 'minutes_3','out',]]"
+    "train = train[['minutes_0', 'minutes_1', 'minutes_2', 'minutes_3','out',]]\n",
+    "val   = val[['minutes_0', 'minutes_1', 'minutes_2', 'minutes_3','out',]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4d06533",
+   "id": "08dc7bbf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = np.empty((len(train_fwd)), dtype=object) \n",
-    "y_train = np.empty((len(train_fwd)), dtype=object)  \n",
+    "# Define X_train as first four columns and y_train as the last column\n",
+    "X_train = train.iloc[:, :-1]\n",
+    "y_train = train.iloc[:, -1]\n",
     "\n",
-    "# Turn into something rocket can use\n",
-    "for i, irow in train_fwd.iterrows():\n",
-    "    X_train[i] = pd.Series(irow[:-1]).values\n",
-    "    y_train[i] = irow['out']"
+    "X_val = val.iloc[:, :-1]\n",
+    "y_val = val.iloc[:, -1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02f2b63e",
+   "id": "16f8b3bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_val = np.empty((len(val_fwd)), dtype=object) \n",
-    "y_val = np.empty((len(val_fwd)), dtype=object)  \n",
-    "\n",
-    "# Turn into something rocket can use\n",
-    "for i, irow in val_fwd.iterrows():\n",
-    "    X_val[i] = pd.Series(irow[:-1]).values\n",
-    "    y_val[i] = irow['out']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f5e3e8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train = pd.DataFrame(X_train, columns=['dim_0'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b22dc51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train_array = np.array([x for x in X_train['dim_0']])\n",
-    "\n",
-    "X_val_array = np.array([x for x in X_val])\n",
-    "\n",
-    "# Convert y_train and y_val to numpy arrays\n",
-    "y_train_array = np.array(y_train, dtype=float)\n",
-    "y_val_array = np.array(y_val, dtype=float)"
+    "# Turn X_train into a 2D array\n",
+    "X_train_array = X_train.values.reshape(X_train.shape[0], X_train.shape[1], 1)\n",
+    "X_val_array   = X_val.values.reshape(X_val.shape[0], X_val.shape[1], 1)"
    ]
   },
   {
@@ -124,7 +93,9 @@
    "source": [
     "# Now fit the regressor\n",
     "reg = RocketRegressor() \n",
-    "reg.fit(X_train_array, y_train_array)"
+    "reg.fit(X_train_array, y_train)\n",
+    "\n",
+    "y_pred = reg.predict(X_val_array)"
    ]
   },
   {
@@ -133,9 +104,7 @@
    "id": "83cb9c8b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "y_pred_rocket = reg.predict(X_val_array)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
