--- a/notebooks/rocket_regression_modular.ipynb
+++ b/notebooks/rocket_regression_modular.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "95d0ebd8",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "from datetime import datetime\n",
     "np.random.seed(42)\n",
     "\n",
     "from sktime.regression.kernel_based import RocketRegressor\n",
@@ -21,132 +23,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a4718b7f",
+   "execution_count": null,
+   "id": "8d553bb3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../datasets/training_dictionary.pkl', 'rb') as f:\n",
-    "    train_dict = pickle.load(f)\n",
-    "\n",
-    "with open('../datasets/validation_dictionary.pkl', 'rb') as f:\n",
-    "    val_dict = pickle.load(f)"
+    "def run_rocket_experiments_incremental():\n",
+    "    \"\"\"Run experiments and save results incrementally\"\"\"\n",
+    "    \n",
+    "    positions = ['FWD', 'GK']\n",
+    "    rocket_models = ['rocket']\n",
+    "    \n",
+    "    # Create results directory\n",
+    "    results_dir = '../outputs/rocket_experiments'\n",
+    "    os.makedirs(results_dir, exist_ok=True)\n",
+    "    \n",
+    "    # Initialize or load existing results DataFrame\n",
+    "    results_file = f'{results_dir}/rocket_results_summary.csv'\n",
+    "    results_df = pd.DataFrame()\n",
+    "    print(\"Starting fresh experiments\")\n",
+    "    \n",
+    "    # Load data once  \n",
+    "    with open('../datasets/training_dictionary.pkl', 'rb') as f:\n",
+    "        train_dict = pickle.load(f)\n",
+    "    with open('../datasets/validation_dictionary.pkl', 'rb') as f:\n",
+    "        val_dict = pickle.load(f)\n",
+    "    \n",
+    "    for model in rocket_models:\n",
+    "        print(f\"\\n=== Running {model.upper()} ===\")\n",
+    "        \n",
+    "        for position in positions:\n",
+    "        \n",
+    "            print(f\"  Processing {position}...\")\n",
+    "            \n",
+    "            try:\n",
+    "                # Run the experiment\n",
+    "                y_pred, y_val = apply_rocket(train_dict, val_dict, \n",
+    "                                           position=position, \n",
+    "                                           rocket_model=model)\n",
+    "                \n",
+    "                mae = mean_absolute_error(y_val, y_pred)\n",
+    "                rmse = root_mean_squared_error(y_val, y_pred)\n",
+    "                \n",
+    "                # Create new result entry\n",
+    "                new_result = pd.DataFrame([{\n",
+    "                    'model': model,\n",
+    "                    'position': position,\n",
+    "                    'mae': mae,\n",
+    "                    'rmse': rmse,\n",
+    "                    'n_samples': len(y_val),\n",
+    "                    'timestamp': datetime.now().isoformat(),\n",
+    "                    'status': 'completed'\n",
+    "                }])\n",
+    "                \n",
+    "                # Add to results DataFrame\n",
+    "                results_df = pd.concat([results_df, new_result], ignore_index=True)\n",
+    "                \n",
+    "                # Save detailed predictions separately\n",
+    "                pred_file = f'{results_dir}/predictions_{model}_{position}.pkl'\n",
+    "                with open(pred_file, 'wb') as f:\n",
+    "                    pickle.dump({\n",
+    "                        'predictions': y_pred, \n",
+    "                        'actual': y_val,\n",
+    "                        'model': model,\n",
+    "                        'position': position,\n",
+    "                        'timestamp': datetime.now().isoformat()\n",
+    "                    }, f)\n",
+    "                \n",
+    "                # Save updated DataFrame immediately\n",
+    "                results_df.to_csv(results_file, index=False)\n",
+    "                results_df.to_pickle(f'{results_dir}/rocket_results_summary.pkl')\n",
+    "                \n",
+    "                print(f\"    RMSE: {rmse:.3f}, MAE: {mae:.3f} - SAVED\")\n",
+    "                \n",
+    "            except Exception as e:\n",
+    "                print(f\"    Error: {e}\")\n",
+    "                \n",
+    "                # Save error result\n",
+    "                error_result = pd.DataFrame([{\n",
+    "                    'model': model,\n",
+    "                    'position': position,\n",
+    "                    'mae': None,\n",
+    "                    'rmse': None,\n",
+    "                    'n_samples': None,\n",
+    "                    'timestamp': datetime.now().isoformat(),\n",
+    "                    'status': 'error',\n",
+    "                    'error_message': str(e)\n",
+    "                }])\n",
+    "                \n",
+    "                results_df = pd.concat([results_df, error_result], ignore_index=True)\n",
+    "                \n",
+    "                # Save DataFrame even with error\n",
+    "                results_df.to_csv(results_file, index=False)\n",
+    "                results_df.to_pickle(f'{results_dir}/rocket_results_summary.pkl')\n",
+    "    \n",
+    "    return results_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41d288f1",
+   "id": "89cb6e31",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating kernels with lengths: [ 7  9 11]\n",
-      "RMSE FWD: 33.93719973956141\n",
-      "MSE FWD: 29.584283959902134\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "i_position = 'FWD'\n",
-    "y_pred, y_val = apply_rocket(train_dict, val_dict, position=i_position, rocket_model='rocket')\n",
+    "# Run experiments\n",
+    "results_df = run_rocket_experiments_incremental()\n",
     "\n",
-    "mae = mean_absolute_error(y_val, y_pred)\n",
-    "rMAE = root_mean_squared_error(y_val, y_pred)\n",
-    "print(f'RMSE {i_position}: {rMAE}')\n",
-    "print(f'MAE {i_position}: {mae}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c28185e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating kernels with lengths: [ 7  9 11]\n",
-      "RMSE GK: 39.76132919563875\n",
-      "MSE GK: 35.175467379520825\n"
-     ]
-    }
-   ],
-   "source": [
-    "i_position = 'GK'\n",
-    "y_pred, y_val = apply_rocket(train_dict, val_dict, position=i_position, rocket_model='rocket')\n",
+    "# Display final summary\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"FINAL RESULTS SUMMARY\")\n",
+    "print(\"=\"*50)\n",
     "\n",
-    "mae = mean_absolute_error(y_val, y_pred)\n",
-    "rmse = root_mean_squared_error(y_val, y_pred)\n",
-    "print(f'RMSE {i_position}: {rmse}')\n",
-    "print(f'MAE {i_position}: {mae}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "994049aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating kernels with lengths: [ 7  9 11]\n"
-     ]
-    }
-   ],
-   "source": [
-    "i_position = 'MID'\n",
-    "y_pred, y_val = apply_rocket(train_dict, val_dict, position=i_position, rocket_model='rocket')\n",
+    "completed_results = results_df[results_df['status'] == 'completed']\n",
+    "if len(completed_results) > 0:\n",
+    "    print(\"\\nRMSE by Position and Model:\")\n",
+    "    rmse_pivot = completed_results.pivot(index='position', columns='model', values='rmse')\n",
+    "    print(rmse_pivot.round(3))\n",
+    "    \n",
+    "    print(\"\\nMAE by Position and Model:\")\n",
+    "    mae_pivot = completed_results.pivot(index='position', columns='model', values='mae')\n",
+    "    print(mae_pivot.round(3))\n",
+    "else:\n",
+    "    print(\"No completed results found\")\n",
     "\n",
-    "mae = mean_absolute_error(y_val, y_pred)\n",
-    "rmse = root_mean_squared_error(y_val, y_pred)\n",
-    "print(f'RMSE {i_position}: {rmse}')\n",
-    "print(f'MAE {i_position}: {mae}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3d765a3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating kernels with lengths: [ 7  9 11]\n",
-      "RMSE DEF: 40.639959605935594\n",
-      "MSE DEF: 38.855616865053236\n"
-     ]
-    }
-   ],
-   "source": [
-    "i_position = 'DEF'\n",
-    "y_pred, y_val = apply_rocket(train_dict, val_dict, position=i_position, rocket_model='rocket')\n",
-    "\n",
-    "mae = mean_absolute_error(y_val, y_pred)\n",
-    "rmse = root_mean_squared_error(y_val, y_pred)\n",
-    "print(f'RMSE {i_position}: {rmse}')\n",
-    "print(f'MAE {i_position}: {mae}')"
+    "print(f\"\\nResults saved to: ../results/\")\n",
+    "print(f\"Summary file: rocket_results_summary.csv\")"
    ]
   }
  ],
