ran rocket saving results

--- a/notebooks/rocket_regression_modular.ipynb
+++ b/notebooks/rocket_regression_modular.ipynb
@@ -28,14 +28,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_rocket_experiments_incremental():\n",
+    "def run_rocket_experiments_incremental(train_dict_path, val_dict_path):\n",
     "    \"\"\"Run experiments and save results incrementally\"\"\"\n",
     "    \n",
-    "    positions = ['FWD', 'GK']\n",
-    "    rocket_models = ['rocket']\n",
+    "    positions = ['FWD', 'MID', 'DEF', 'GK']\n",
+    "    rocket_models = ['rocket','minirocket']\n",
     "    \n",
     "    # Create results directory\n",
-    "    results_dir = '../outputs/rocket_experiments'\n",
+    "    results_dir = f\"../outputs/rocket_experiments/{datetime.now().strftime('%Y%m%d_%H%M%S')}\"\n",
     "    os.makedirs(results_dir, exist_ok=True)\n",
     "    \n",
     "    # Initialize or load existing results DataFrame\n",
@@ -44,9 +44,9 @@
     "    print(\"Starting fresh experiments\")\n",
     "    \n",
     "    # Load data once  \n",
-    "    with open('../datasets/training_dictionary.pkl', 'rb') as f:\n",
+    "    with open(train_dict_path, 'rb') as f:\n",
     "        train_dict = pickle.load(f)\n",
-    "    with open('../datasets/validation_dictionary.pkl', 'rb') as f:\n",
+    "    with open(val_dict_path, 'rb') as f:\n",
     "        val_dict = pickle.load(f)\n",
     "    \n",
     "    for model in rocket_models:\n",
@@ -67,6 +67,8 @@
     "                \n",
     "                # Create new result entry\n",
     "                new_result = pd.DataFrame([{\n",
+    "                    'train_dict_path': train_dict_path,\n",
+    "                    'val_dict_path': val_dict_path,\n",
     "                    'model': model,\n",
     "                    'position': position,\n",
     "                    'mae': mae,\n",
@@ -87,6 +89,8 @@
     "                        'actual': y_val,\n",
     "                        'model': model,\n",
     "                        'position': position,\n",
+    "                        'train_dict_path': train_dict_path,\n",
+    "                        'val_dict_path': val_dict_path,                        \n",
     "                        'timestamp': datetime.now().isoformat()\n",
     "                    }, f)\n",
     "                \n",
@@ -128,7 +132,12 @@
    "outputs": [],
    "source": [
     "# Run experiments\n",
-    "results_df = run_rocket_experiments_incremental()\n",
+    "# training_dictionary_file = '../datasets/training_dictionary.pkl'\n",
+    "# validation_dictionary_file = '../datasets/validation_dictionary.pkl'\n",
+    "training_dictionary_file = '../datasets/training_dictionary_20_weeks.pkl'\n",
+    "validation_dictionary_file = '../datasets/validation_dictionary_20_weeks.pkl'\n",
+    "\n",
+    "results_df = run_rocket_experiments_incremental(training_dictionary_file, validation_dictionary_file)\n",
     "\n",
     "# Display final summary\n",
     "print(\"\\n\" + \"=\"*50)\n",
@@ -147,8 +156,37 @@
     "else:\n",
     "    print(\"No completed results found\")\n",
     "\n",
-    "print(f\"\\nResults saved to: ../results/\")\n",
+    "print(f\"\\nResults saved to: ../outputs/rocket_experiments/\")\n",
     "print(f\"Summary file: rocket_results_summary.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc6a0b53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the saved results for further analysis\n",
+    "results_path = '../outputs/rocket_experiments/20250612_120426'\n",
+    "\n",
+    "predictions_file = f'{results_path}/predictions_rocket_FWD.pkl'\n",
+    "with open(predictions_file, 'rb') as f:\n",
+    "    predictions_data = pickle.load(f)\n",
+    "print(\"\\nLoaded predictions data:\")\n",
+    "\n",
+    "# Turn predictions into DataFrame for easier handling\n",
+    "predictions_df = pd.DataFrame({\n",
+    "    'predictions': predictions_data['predictions'],\n",
+    "    'actual': predictions_data['actual'],\n",
+    "    'model': predictions_data['model'],\n",
+    "    'position': predictions_data['position'],\n",
+    "    'timestamp': predictions_data['timestamp']\n",
+    "})\n",
+    "\n",
+    "# Load the summary DataFrame\n",
+    "summary_file = f'{results_path}/rocket_results_summary.csv'\n",
+    "summary_df = pd.read_csv(summary_file)"
    ]
   }
  ],
