all results from Levan

--- a/notebooks/rocket_regression_modular.ipynb
+++ b/notebooks/rocket_regression_modular.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95d0ebd8",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8d553bb3",
    "metadata": {},
    "outputs": [],
@@ -126,10 +126,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "89cb6e31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting fresh experiments\n",
+      "\n",
+      "=== Running ROCKET ===\n",
+      "  Processing FWD...\n",
+      "Number of minute columns: 20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating kernels with lengths: [ 7  9 11]\n",
+      "    RMSE: 26.986, MAE: 17.285 - SAVED\n",
+      "  Processing MID...\n",
+      "Number of minute columns: 20\n",
+      "Generating kernels with lengths: [ 7  9 11]\n",
+      "    RMSE: 25.946, MAE: 18.270 - SAVED\n",
+      "  Processing DEF...\n",
+      "Number of minute columns: 20\n",
+      "Generating kernels with lengths: [ 7  9 11]\n",
+      "    RMSE: 32.290, MAE: 23.019 - SAVED\n",
+      "  Processing GK...\n",
+      "Number of minute columns: 20\n",
+      "Generating kernels with lengths: [ 7  9 11]\n",
+      "    RMSE: 32.898, MAE: 25.817 - SAVED\n",
+      "\n",
+      "=== Running MINIROCKET ===\n",
+      "  Processing FWD...\n",
+      "Number of minute columns: 20\n",
+      "    RMSE: 21.180, MAE: 12.834 - SAVED\n",
+      "  Processing MID...\n",
+      "Number of minute columns: 20\n",
+      "    RMSE: 24.311, MAE: 16.168 - SAVED\n",
+      "  Processing DEF...\n",
+      "Number of minute columns: 20\n",
+      "    RMSE: 24.819, MAE: 15.130 - SAVED\n",
+      "  Processing GK...\n",
+      "Number of minute columns: 20\n",
+      "    RMSE: 23.070, MAE: 11.748 - SAVED\n",
+      "\n",
+      "==================================================\n",
+      "FINAL RESULTS SUMMARY\n",
+      "==================================================\n",
+      "\n",
+      "RMSE by Position and Model:\n",
+      "model     minirocket  rocket\n",
+      "position                    \n",
+      "DEF           24.819  32.290\n",
+      "FWD           21.180  26.986\n",
+      "GK            23.070  32.898\n",
+      "MID           24.311  25.946\n",
+      "\n",
+      "MAE by Position and Model:\n",
+      "model     minirocket  rocket\n",
+      "position                    \n",
+      "DEF           15.130  23.019\n",
+      "FWD           12.834  17.285\n",
+      "GK            11.748  25.817\n",
+      "MID           16.168  18.270\n",
+      "\n",
+      "Results saved to: ../outputs/rocket_experiments/\n",
+      "Summary file: rocket_results_summary.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Run experiments\n",
     "# training_dictionary_file = '../datasets/training_dictionary.pkl'\n",
