new results from Levan

--- a/notebooks/transform_rocket_results.ipynb
+++ b/notebooks/transform_rocket_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "274eff75",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "73f7ad53",
    "metadata": {},
    "outputs": [
@@ -29,15 +29,19 @@
    ],
    "source": [
     "# results folder\n",
-    "results_folder = '../outputs/rocket_experiments/20250612_120426'\n",
-    "\n",
-    "# outputs/rocket_experiments/20250612_120426 20250612_124538\n",
+    "# results_folder = '../outputs/rocket_experiments/20250612_120426'\n",
+    "results_folder = '../outputs/rocket_experiments/20250612_124538'\n",
     "\n",
     "player_positions = ['FWD', 'MID', 'DEF', 'GK']\n",
-    "models = ['rocket']\n",
+    "# player_positions = ['FWD']\n",
+    "models = ['rocket','minirocket']\n",
     "\n",
     "# Load the player ids and dates\n",
-    "val_file = '../datasets/validation_dictionary_20_weeks.pkl'\n",
+    "if results_folder == '../outputs/rocket_experiments/20250612_120426':\n",
+    "    val_file = '../datasets/validation_dictionary.pkl'\n",
+    "elif results_folder == '../outputs/rocket_experiments/20250612_124538':\n",
+    "    val_file = '../datasets/validation_dictionary_20_weeks.pkl'\n",
+    "\n",
     "print(f'Loading validation data from {val_file}')\n",
     "\n",
     "val_data = pd.read_pickle(val_file)\n",
